--- a/sge/CMakeLists.txt
+++ b/sge/CMakeLists.txt
@@ -1,20 +1,61 @@
 cmake_minimum_required(VERSION 3.10)
 
+# set up base variables
 set(VENDOR_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../vendor")
 set(SGE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
 set(SGE_INCLUDES ${SGE_DIR} "${VENDOR_DIR}/glm")
 set(SGE_LIBS spdlog)
 
-# glob source
-file(GLOB_RECURSE SGE_MANIFEST CONFIGURE_DEPENDS "${SGE_DIR}/*.cpp" "${SGE_DIR}/*.h")
+# platform detection
+if(SGE_DESKTOP)
+    list(APPEND SGE_DEFINES SGE_DESKTOP)
+    list(APPEND SGE_LIBS glfw)
+    list(APPEND ENABLED_PLATFORMS desktop)
+endif()
+
+if(WIN32)
+    list(APPEND SGE_DEFINES SGE_WINDOWS)
+    list(APPEND ENABLED_PLATFORMS windows)
+elseif(UNIX)
+    if(APPLE)
+        if(SGE_DESKTOP)
+            list(APPEND SGE_DEFINES SGE_MACOSX)
+            list(APPEND ENABLED_PLATFORMS macosx)
+        else()
+            message(FATAL_ERROR "IOS is not supported yet - sorry!")
+        endif()
+    else()
+        # we can assume its linux
+        list(APPEND SGE_DEFINES SGE_LINUX)
+        list(APPEND SGE_LIBS pthread stdc++fs)
+        list(APPEND ENABLED_PLATFORMS linux)
+    endif()
+endif()
+
+# glob sources
+file(GLOB_RECURSE SGE_MANIFEST CONFIGURE_DEPENDS "${SGE_DIR}/*")
+file(GLOB_RECURSE PLATFORM_CODE CONFIGURE_DEPENDS "${SGE_DIR}/platform/*")
+list(REMOVE_ITEM SGE_MANIFEST ${PLATFORM_CODE})
+foreach(PLATFORM_NAME ${ENABLED_PLATFORMS})
+    file(GLOB_RECURSE GLOBBED_PLATFORM_CODE CONFIGURE_DEPENDS "${SGE_DIR}/platform/${PLATFORM_NAME}/*")
+    list(APPEND SGE_MANIFEST ${GLOBBED_PLATFORM_CODE})
+endforeach()
 
 # add target
 add_library(sge STATIC ${SGE_MANIFEST})
 target_link_libraries(sge PUBLIC ${SGE_LIBS})
 target_include_directories(sge PUBLIC ${SGE_INCLUDES})
+target_compile_definitions(sge PUBLIC ${SGE_DEFINES} $<$<CONFIG:Debug>:SGE_DEBUG>)
 set_target_properties(sge PROPERTIES CXX_STANDARD 17)
 
 # setup pch
 if(${CMAKE_VERSION} VERSION_GREATER_EQUAL 3.16)
-    target_precompile_headers(sge PRIVATE "${SGE_DIR}/sgepch.h")
+    set(SGE_PCH "${SGE_DIR}/sgepch.h")
+    message(STATUS "SGE: Using precompiled header: ${SGE_PCH}")
+    target_precompile_headers(sge PRIVATE ${SGE_PCH})
 endif()
+
+message(STATUS "SGE: Linking against libraries: ${SGE_LIBS}")
+message(STATUS "SGE: Including directories: ${SGE_INCLUDES}")
+message(STATUS "SGE: Defining preprocessor definitions: ${SGE_DEFINES}")
+message(STATUS "SGE: Included platform-specific code: ${ENABLED_PLATFORMS}")
