--- a/sge/CMakeLists.txt
+++ b/sge/CMakeLists.txt
@@ -43,10 +43,10 @@ endif()
 
 # glob sources
 file(GLOB_RECURSE SGE_MANIFEST CONFIGURE_DEPENDS "${SGE_DIR}/*")
-file(GLOB_RECURSE PLATFORM_CODE CONFIGURE_DEPENDS "${SGE_DIR}/platform/*")
+file(GLOB_RECURSE PLATFORM_CODE CONFIGURE_DEPENDS "${SGE_DIR}/sge/platform/*")
 list(REMOVE_ITEM SGE_MANIFEST ${PLATFORM_CODE})
 foreach(PLATFORM_NAME ${ENABLED_PLATFORMS})
-    file(GLOB_RECURSE GLOBBED_PLATFORM_CODE CONFIGURE_DEPENDS "${SGE_DIR}/platform/${PLATFORM_NAME}/*")
+    file(GLOB_RECURSE GLOBBED_PLATFORM_CODE CONFIGURE_DEPENDS "${SGE_DIR}/sge/platform/${PLATFORM_NAME}/*")
     list(APPEND SGE_MANIFEST ${GLOBBED_PLATFORM_CODE})
 endforeach()
 
