--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,10 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: recursive
+      - name: setup python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9.x
       - name: install dependencies (ubuntu)
         if: ${{ matrix.os-name == 'ubuntu' }}
         shell: bash
@@ -22,6 +26,14 @@ jobs:
         shell: bash
         run: |
           brew install cmake
+      - name: install vulkan (windows and macos)
+        if: ${{ matrix.os-name == 'windows' || matrix.os-name == 'macos' }}
+        shell: bash
+        env:
+          ACTIONS_ALLOW_UNSECURE_COMMANDS: true
+        run: |
+          python -m pip install requests
+          python scripts/install_vulkan_sdk.py --gh-actions
       - name: build
         shell: bash
         run: |
