--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "vendor/SPIRV-Cross"]
 	path = vendor/SPIRV-Cross
 	url = https://github.com/KhronosGroup/SPIRV-Cross.git
+[submodule "vendor/stb"]
+	path = vendor/stb
+	url = https://github.com/yodasoda1219/stb.git
