--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,36 @@ set(SGE_DESKTOP $<PLATFORM_ID:Windows,Linux,Darwin>)
 find_package(Vulkan)
 add_subdirectory("vendor")
 
-# my code
+# sge targets
 add_subdirectory("sge")
 add_subdirectory("sgm")
 add_subdirectory("sandbox")
+
+if(MSVC)
+    set_directory_properties(PROPERTIES VS_STARTUP_PROJECT sgm)
+endif()
+
+# folders
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
+
+macro(get_targets DIRECTORY TARGETS)
+    get_property(SUBDIRECTORIES DIRECTORY ${DIRECTORY} PROPERTY SUBDIRECTORIES)
+    foreach(SUBDIRECTORY ${SUBDIRECTORIES})
+        get_targets(${SUBDIRECTORY} ${TARGETS})
+    endforeach()
+
+    get_property(DIRECTORY_TARGETS DIRECTORY ${DIRECTORY} PROPERTY BUILDSYSTEM_TARGETS)
+    list(APPEND ${TARGETS} ${DIRECTORY_TARGETS})
+endmacro()
+
+get_targets("vendor" DEPENDENCIES)
+foreach(DEPENDENCY ${DEPENDENCIES})
+    set(FOLDER_NAME "dependencies")
+
+    get_target_property(CURRENT_FOLDER ${DEPENDENCY} FOLDER)
+    if(NOT CURRENT_FOLDER STREQUAL "CURRENT_FOLDER-NOTFOUND")
+        set(FOLDER_NAME "${FOLDER_NAME}/${CURRENT_FOLDER}")
+    endif()
+
+    set_target_properties(${DEPENDENCY} PROPERTIES FOLDER ${FOLDER_NAME})
+endforeach()
