--- a/sandbox/CMakeLists.txt
+++ b/sandbox/CMakeLists.txt
@@ -4,6 +4,7 @@ file(GLOB_RECURSE SANDBOX_MANIFEST CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR
 add_executable(sandbox ${SANDBOX_MANIFEST})
 target_link_libraries(sandbox PRIVATE sge)
 set_target_properties(sandbox PROPERTIES CXX_STANDARD 17 FOLDER "examples")
+copy_required_dlls(sandbox)
 
 if(MSVC)
     set_target_properties(sandbox PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
