--- a/sge/CMakeLists.txt
+++ b/sge/CMakeLists.txt
@@ -8,33 +8,28 @@ set(SGE_INCLUDES ${SGE_DIR} ${Mono_INCLUDE_DIR} "${VENDOR_DIR}/glm")
 set(SGE_LIBS spdlog shaderc spirv-cross-glsl stb EnTT box2d sge-imgui nlohmann_json ${Mono_LIBRARY})
 
 # platform detection
-if(SGE_DESKTOP)
+if(SGE_PLATFORM_DESKTOP)
     list(APPEND SGE_DEFINES SGE_PLATFORM_DESKTOP)
     list(APPEND SGE_LIBS glfw)
     list(APPEND ENABLED_PLATFORMS desktop)
-endif()
 
-if(WIN32)
-    list(APPEND SGE_DEFINES SGE_PLATFORM_WINDOWS)
-    list(APPEND ENABLED_PLATFORMS windows)
-elseif(UNIX)
-    if(APPLE)
-        if(SGE_DESKTOP)
-            list(APPEND SGE_DEFINES SGE_PLATFORM_MACOSX)
-            list(APPEND ENABLED_PLATFORMS macosx)
-        else()
-            message(FATAL_ERROR "IOS is not supported yet - sorry!")
-        endif()
-    else()
-        # we can assume its linux
+    if(SGE_PLATFORM_WINDOWS)
+        list(APPEND SGE_DEFINES SGE_PLATFORM_WINDOWS)
+        list(APPEND ENABLED_PLATFORMS windows)
+    elseif(SGE_PLATFORM_MACOSX)
+        list(APPEND SGE_DEFINES SGE_PLATFORM_MACOSX)
+        list(APPEND ENABLED_PLATFORMS macosx)
+    elseif(SGE_PLATFORM_LINUX)
         list(APPEND SGE_DEFINES SGE_PLATFORM_LINUX)
         list(APPEND SGE_LIBS pthread stdc++fs)
         list(APPEND ENABLED_PLATFORMS linux)
     endif()
+else()
+    message(FATAL_ERROR "Other systems are not currently supported!")
 endif()
 
-# renderer api
-if(Vulkan_FOUND)
+# graphics api
+if(SGE_USE_VULKAN)
     list(APPEND SGE_INCLUDES ${Vulkan_INCLUDE_DIR})
     list(APPEND SGE_LIBS ${Vulkan_LIBRARY} VulkanMemoryAllocator)
     list(APPEND SGE_DEFINES SGE_USE_VULKAN)
