--- a/sge/CMakeLists.txt
+++ b/sge/CMakeLists.txt
@@ -36,6 +36,13 @@ if(SGE_USE_VULKAN)
     list(APPEND ENABLED_PLATFORMS vulkan)
 endif()
 
+if(SGE_USE_DIRECTX)
+    list(APPEND SGE_INCLUDES ${D3D12_INCLUDE_DIRS})
+    list(APPEND SGE_LIBS DirectX-Headers ${D3D12_LIBRARIES})
+    list(APPEND SGE_DEFINES SGE_USE_DIRECTX)
+    list(APPEND ENABLED_PLATFORMS directx)
+endif()
+
 # glob sources
 file(GLOB_RECURSE SGE_MANIFEST CONFIGURE_DEPENDS "${SGE_DIR}/*")
 file(GLOB_RECURSE PLATFORM_CODE CONFIGURE_DEPENDS "${SGE_DIR}/sge/platform/*")
