--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,13 +20,13 @@ jobs:
         with:
           dotnet-version: 6.0.x
       - name: install dependencies (ubuntu)
-        if: ${{ matrix.os-name == 'ubuntu' }}
+        if: ${{ matrix.os-name == 'ubuntu-latest' }}
         shell: bash
         run: |
           sudo apt-get update
           sudo apt-get install -y mesa-common-dev libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev cmake
       - name: install dependencies (macos)
-        if: ${{ matrix.os-name == 'macos' }}
+        if: ${{ matrix.os-name == 'macos-latest' }}
         shell: bash
         run: |
           brew install cmake
