--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,17 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y mesa-common-dev libxrandr-dev libxinerama-dev \
-            libxcursor-dev libxi-dev cmake build-essential libc-dev-bin
+            libxcursor-dev libxi-dev cmake
+      - name: build dotnet (ubuntu)
+        if: ${{ matrix.os-name == 'ubuntu-latest' }}
+        shell: bash
+        run: |
+          echo Compiling .NET 6 native runtime due to glibc conflicts
+          git clone https://github.com/dotnet/runtime.git dotnet-runtime
+          dotnet build dotnet-runtime/Build.proj -c Release
+          cp -f dotnet-runtime/artifacts/obj/mono/Linux.x64.Release/out/lib/libcoreclr.so vendor/mono/lib/linux/
+          cp -f dotnet-runtime/artifacts/obj/mono/Linux.x64.Release/out/lib/libmonosgen-2.0.a vendor/mono/lib/linux/
+          rm -rf dotnet-runtime
       - name: install dependencies (macos)
         if: ${{ matrix.os-name == 'macos-latest' }}
         shell: bash
