--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,10 +31,13 @@ jobs:
         shell: bash
         run: |
           echo Compiling .NET 6 native runtime due to glibc conflicts
-          git clone https://github.com/dotnet/runtime.git dotnet-runtime
-          dotnet build dotnet-runtime/Build.proj -c Release
-          cp -f dotnet-runtime/artifacts/obj/mono/Linux.x64.Release/out/lib/libcoreclr.so vendor/mono/lib/linux/
-          cp -f dotnet-runtime/artifacts/obj/mono/Linux.x64.Release/out/lib/libmonosgen-2.0.a vendor/mono/lib/linux/
+          git clone --no-checkout https://github.com/dotnet/runtime.git dotnet-runtime
+          cd dotnet-runtime
+          git checkout v6.0.1
+          dotnet build src/mono/mono.proj -c Release
+          cp -f artifacts/obj/mono/Linux.x64.Release/out/lib/libcoreclr.so ../vendor/mono/lib/linux/
+          cp -f artifacts/obj/mono/Linux.x64.Release/out/lib/libmonosgen-2.0.a ../vendor/mono/lib/linux/
+          cd ..
           rm -rf dotnet-runtime
       - name: install dependencies (macos)
         if: ${{ matrix.os-name == 'macos-latest' }}
