clean up (whoops

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,6 +55,6 @@ jobs:
       - name: build
         shell: bash
         run: |
-          dotnet restore SGECore.sln
+          dotnet restore scriptcore/scriptcore.csproj
           cmake --preset default -DCMAKE_BUILD_TYPE=Release
           cmake --build --preset default
