--- a/sge/CMakeLists.txt
+++ b/sge/CMakeLists.txt
@@ -13,7 +13,7 @@ elseif(SGE_PLATFORM_MACOSX)
 elseif(SGE_PLATFORM_LINUX)
     set(MONO_PLATFORM linux)
 endif()
-file(GLOB MONO_LIBS CONFIGURE_DEPENDS "${VENDOR_DIR}/mono/lib/${MONO_PLATFORM}/*")
+file(GLOB MONO_LIBS CONFIGURE_DEPENDS "${VENDOR_DIR}/mono/lib/${MONO_PLATFORM}/${CMAKE_SYSTEM_PROCESSOR}/*")
 
 # base lists
 set(SGE_INCLUDES ${SGE_DIR} "${VENDOR_DIR}/mono/include" "${VENDOR_DIR}/glm")
