Fix linux action
Signed-off-by: Joe Beda <joe.github@bedafamily.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,8 +35,8 @@ jobs:
           cd dotnet-runtime
           git checkout v6.0.1
           dotnet build src/mono/mono.proj -c Release
-          cp -f artifacts/obj/mono/Linux.x64.Release/out/lib/libcoreclr.so ../vendor/mono/lib/linux/
-          cp -f artifacts/obj/mono/Linux.x64.Release/out/lib/libmonosgen-2.0.a ../vendor/mono/lib/linux/
+          cp -f artifacts/obj/mono/Linux.x64.Release/out/lib/libcoreclr.so ../vendor/mono/lib/linux/x86_64
+          cp -f artifacts/obj/mono/Linux.x64.Release/out/lib/libmonosgen-2.0.a ../vendor/mono/lib/linux/x86_64
           cd ..
           rm -rf dotnet-runtime
       - name: install dependencies (macos)
