--- a/sge/CMakeLists.txt
+++ b/sge/CMakeLists.txt
@@ -15,9 +15,16 @@ elseif(SGE_PLATFORM_LINUX)
 endif()
 file(GLOB MONO_LIBS CONFIGURE_DEPENDS "${VENDOR_DIR}/mono/lib/${MONO_PLATFORM}/${CMAKE_SYSTEM_PROCESSOR}/*")
 
+if(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "x86_64" OR ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "AMD64")
+    set(SGE_CPU_ARCHITECTURE x64)
+else()
+    set(SGE_CPU_ARCHITECTURE ARM64)
+endif()
+
 # base lists
 set(SGE_INCLUDES ${SGE_DIR} "${VENDOR_DIR}/mono/include" "${VENDOR_DIR}/glm")
 set(SGE_LIBS spdlog shaderc spirv-cross-glsl stb EnTT box2d sge-imgui nlohmann_json ${MONO_LIBS})
+set(SGE_DEFINES SGE_CPU_ARCHITECTURE="${SGE_CPU_ARCHITECTURE}")
 
 # nvidia nsight aftermath
 if(SGE_USE_AFTERMATH)
