--- a/sge/CMakeLists.txt
+++ b/sge/CMakeLists.txt
@@ -101,7 +101,7 @@ add_custom_command(OUTPUT ${TYPE_FACE_DIRECTORY_FILE}
     "${CMAKE_SOURCE_DIR}/assets/fonts"
     ${TYPE_FACE_DIRECTORY_FILE}
     "${CMAKE_SOURCE_DIR}/LICENSE:190"
-    COMMENT "Generating SGE type face directory"
+    COMMENT "Generating embedded SGE type face directory"
     DEPENDS "${CMAKE_SOURCE_DIR}/assets/fonts")
 
 # add target
