--- a/sandbox-project/ScriptAssembly.csproj
+++ b/sandbox-project/ScriptAssembly.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Reference Include="..\assemblies\SGE.Scriptcore.dll" />
+        <Reference Include="..\assets\assemblies\SGE.Scriptcore.dll" />
     </ItemGroup>
 
 </Project>
