--- a/sge/CMakeLists.txt
+++ b/sge/CMakeLists.txt
@@ -110,7 +110,7 @@ add_custom_command(OUTPUT ${TYPE_FACE_DIRECTORY_FILE}
     ${TYPE_FACE_DIRECTORY_FILE}
     "${CMAKE_SOURCE_DIR}/LICENSE${LICENSE_DESC_SEPARATOR}190"
     COMMENT "Generating embedded SGE type face directory"
-    DEPENDS "${CMAKE_SOURCE_DIR}/assets/fonts" embed_type_faces)
+    DEPENDS "${CMAKE_SOURCE_DIR}/assets/fonts/" embed_type_faces)
 
 # add target
 add_library(sge STATIC ${SGE_MANIFEST} ${SGE_SHADERS} ${TYPE_FACE_DIRECTORY_FILE})
