--- a/assets/template/ScriptAssembly.csproj
+++ b/assets/template/ScriptAssembly.csproj
@@ -4,12 +4,10 @@
         <LangVersion>latest</LangVersion>
         <RootNamespace>Template</RootNamespace>
         <TargetFramework>net6.0</TargetFramework>
-
-        <SGE_DIR Condition="'$(SGE_DIR)' == ''">$(ProjectDir)..\..\</SGE_DIR>
     </PropertyGroup>
 
     <ItemGroup>
-        <Reference Include="$(SGE_DIR)assets\assemblies\SGE.Scriptcore.dll" />
+        <Reference Include="$(SGE_DIR)\assets\assemblies\SGE.Scriptcore.dll" />
     </ItemGroup>
 
 </Project>
