--- a/assets/template/ScriptAssembly.csproj
+++ b/assets/template/ScriptAssembly.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <LangVersion>latest</LangVersion>
-        <RootNamespace>Template</RootNamespace>
+        <RootNamespace>%project%</RootNamespace>
         <TargetFramework>net6.0</TargetFramework>
     </PropertyGroup>
 
